--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,12 @@
     "paths": {
       "@/*": ["./src/*"],
       "@/components/*": ["./src/components/*"],
-      "@/assests/*": ["./src/assests/*"]
+      "@/assests/*": ["./src/assests/*"],
+      "@/global/*": ["./src/global/*"],
+      "@/hooks/*": ["./src/hooks/*"],
+      "@/services/*": ["./src/services/*"],
+      "@/types/*": ["./src/types/*"],
+      "@/utils/*": ["./src/utils/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
